# bbct-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  doker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: bbct-api.yml  bbct-web.yml  build.yml  codeql-analysis.yml  docker.yml  python-app.yml  tests.yml
api/: admin.py  models.py  urls.py
api/migrations/: 0001_initial.py
api/tests/: test_views.py
backend/: .ebignore  .gitignore  manage.py  pyproject.toml  requirements.txt
backend/.ebextensions/: db-migrate.config  django.config
backend/.elasticbeanstalk/: config.yml
backend/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_position.py  0003_auto_20171021_0149.py
backend/api/tests/: test_views.py
backend/bbct/: settings.py  urls.py  wsgi.py
backend/bbct/tests/: test_urls.py
backend/examples/: bbct.http
bbct/: settings.py  urls.py  wsgi.py
examples/: bbct.http
nginx/: nginx.conf
