[tool.poetry]
name = "backend"
version = "0.1.0"
description = "BBCT REST API"
authors = ["Code-Apprentice <codeguru42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.12"
djangorestframework = "^3.12.2"
PyYAML = "^5.4.1"
uritemplate = "^4.1.1"
envparse = "^0.2.0"
social-auth-app-django = "^5.0.0"

[tool.poetry.dev-dependencies]
model-bakery = "^1.2.1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
