[tool.poetry]
name = "backend"
version = "0.1.0"
description = "BBCT REST API"
authors = ["Code-Apprentice <codeguru42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.12"
djangorestframework = "^3.13.1"
PyYAML = "^5.4.1"
uritemplate = "^4.1.1"
envparse = "^0.2.0"
social-auth-app-django = "^5.0.0"
django-extensions = "^3.1.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
model-bakery = "=1.3.2"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
